06-ingress/ingress/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: _PRENOM_
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2  
spec:
  ingressClassName: nginx  # class de l'ingress controller
  rules:
  - http:
      paths:
      - path: /_PRENOM_-back(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
