06-ingress/ingress/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: stu_NUMBER_  
  annotations: 
    cert-manager.io/cluster-issuer: letsencrypt-staging
    # kubernetes.io/ingress.class: nginx    
    # https://kubernetes.github.io/ingress-nginx/examples/rewrite/#rewrite-target
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
      - formation.fgtech.fr
      secretName: letsencrypt 
  ingressClassName: nginx
  rules:
  - host: formation.fgtech.fr  
    http:
      paths:
      - path: ###              # path frontend
        pathType: ImplementationSpecific
        backend:
          service:
            name: ###          # Service ciblé
            port:
              number: ###      # Port ciblé du service
